[package]
name = "orbit"
version = "0.1.10"
edition = "2021"
authors = ["Orbit Team <orbit@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/orbitrs/orbit"
readme = "README.md"
description = "Core UI framework for the Orbit ecosystem - provides the rendering engine, component model, and framework APIs. Includes the OrbitKit component library."

[features]
default = ["skia", "gl"]
skia = ["dep:skia-safe"]
wgpu = ["dep:wgpu", "dep:bytemuck", "dep:cgmath"]
gl = ["dep:glium"]
web = ["dep:web-sys"]
desktop = []
embedded = []

[dependencies]
# Rendering dependencies
skia-safe = { version = "0.84.0", features = ["binary-cache", "gl", "textlayout"], default-features = false, optional = true }
wgpu = { version = "0.19.0", optional = true }
bytemuck = { version = "1.15.0", features = ["derive"], optional = true }
cgmath = { version = "0.18.0", optional = true }
glium = { version = "0.34", optional = true }
glutin = { version = "0.31.3", features = ["egl", "glx", "wgl"] }
glutin-winit = "0.4.2"
winit = "0.29.15"
image = "0.24"
html5ever = "0.26"

# WASM support
wasm-bindgen = "0.2.89"
js-sys = "0.3.66"
web-sys = { version = "0.3.66", features = [
    "Document", 
    "Element", 
    "HtmlElement", 
    "Node", 
    "Window",
    "console"
], optional = true}

# Error handling
anyhow = "1.0.75"
thiserror = "1.0"
log = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.34.0", features = ["full"] }
async-trait = "0.1.74"
futures = "0.3.28"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }
url = "2.5.0"

# Props macro dependency
paste = "1.0.15"

# Development utilities
regex = "1.10.2"

# Added from orbitkit
rand = "0.8.5"

[lib]
path = "src/lib.rs"
