[package]
name = "orbit"
version = "0.1.10"
edition = "2021"
authors = ["Orbit Team <orbit@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/orbitrs/orbit"
readme = "README.md"
description = "Core UI framework for the Orbit ecosystem - provides the rendering engine, component model, and framework APIs. Includes the OrbitKit component library."

[features]
default = ["desktop"]
skia = ["dep:skia-safe"]
wgpu = ["dep:wgpu", "dep:bytemuck", "dep:cgmath"]
desktop = ["skia", "dep:glutin", "dep:glutin-winit", "dep:winit", "dep:image", "dep:html5ever", "desktop-gl", "dep:tokio", "dep:reqwest"]
desktop-gl = ["dep:glium"]
web = ["dep:web-sys", "web-gl", "dep:wasm-bindgen-futures"]
web-gl = []
embedded = []

# For WASM builds, we need a minimal feature set
wasm = ["web"]

[dependencies]
# Rendering dependencies
skia-safe = { version = "0.84.0", features = ["binary-cache", "gl", "textlayout"], default-features = false, optional = true }
wgpu = { version = "0.19.0", optional = true }
bytemuck = { version = "1.15.0", features = ["derive"], optional = true }
cgmath = { version = "0.18.0", optional = true }

# Desktop windowing dependencies (optional)
glutin = { version = "0.31.3", features = ["egl", "glx", "wgl"], optional = true }
glutin-winit = { version = "0.4.2", optional = true }
winit = { version = "0.29.15", optional = true }
image = { version = "0.24", optional = true }
html5ever = { version = "0.26", optional = true }

# OpenGL dependencies (desktop only)
glium = { version = "0.34", optional = true }

# WASM support
wasm-bindgen = "0.2.89"
js-sys = "0.3.66"
wasm-bindgen-futures = { version = "0.4.42", optional = true }
web-sys = { version = "0.3.66", features = [
    "Document", 
    "Element", 
    "HtmlElement", 
    "Node", 
    "Window",
    "console"
], optional = true}

# Error handling
anyhow = "1.0.75"
thiserror = "1.0"
log = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.34.0", features = ["full"], optional = true }
async-trait = "0.1.74"
futures = "0.3.28"

# HTTP client
reqwest = { version = "0.11", features = ["json"], optional = true }
url = "2.5.0"

# Props macro dependency
paste = "1.0.15"

# Development utilities
regex = "1.10.2"

# Added from orbitkit
rand = "0.8.5"

# WASM-specific configuration
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[lib]
path = "src/lib.rs"
